Fix CORS for Render frontend URL